src/objects/Work_Part__c.object
<CustomObject>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Part__r.Inventory_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No spare parts meet this description or name.</errorMessage>
            <filterItems>
                <field>Equipment__c.Replacement_Part__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Search for a spare part.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Work Parts</relationshipLabel>
        <relationshipName>Work_Parts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Work Parts</relationshipLabel>
        <relationshipName>Work_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Part</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Work Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>